# django-heralder

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  django_heralder_pr_docs.md  manage.py  pyproject.toml  release_procedure.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: conf.py  index.md  index.rst
herald/: __init__.py  admin.py  apps.py  base.py  decorators.py  models.py  urls.py  utils.py  views.py
herald/conf/: settings.py
herald/contrib/auth/: __init__.py  apps.py  forms.py  notifications.py
herald/contrib/auth/templates/herald/html/: password_reset.html
herald/management/commands/: delete_notifications.py  delnotifs.py
herald/migrations/: 0001_initial.py  0002_auto_20160819_1403.py  0002_auto_20161017_1201.py  0002_auto_20170406_1727.py  0002_sentnotification_attachments.py  0003_auto_20161021_1448.py  0003_auto_20170830_1617.py  0004_auto_20171009_0906.py  0004_notification_verbose_name.py  0005_auto_20180516_1755.py  0005_merge_20170407_1316.py  0006_auto_20170825_1813.py
herald/templates/herald/: sentnotification_detail.html
herald/templates/herald/test/: notification_list.html
herald/templates/notify/test/: notification_list.html
src/herald/: __init__.py  apps.py  base.py  urls.py
src/herald/contrib/auth/: __init__.py
src/herald/contrib/auth/templates/herald/text/: password_reset.txt
src/herald/management/commands/: delnotifs.py
src/herald/migrations/: 0002_sentnotification_attachments.py  0003_auto_20170830_1617.py  0005_auto_20180516_1755.py
tests/: models.py  notifications.py  settings.py  test_admin.py  test_apps.py  test_commands.py  test_contrib_auth.py  test_init.py  test_migrations.py  test_models.py  test_notifications.py  test_usernotifications.py  test_utils.py  test_views.py  urls.py
