[project]
name = "django-heralder"
version = "0.1.0"
#requires-python = ">=3.9"
dependencies = [
    "django>=3.2,<4; python_version<='3.10'",
    "django>=4.2,<5; python_version<='3.12'",
    "django>=5.2,<6; python_version<='3.13'",
    "jsonpickle>=4.1.1",
]

[project.optional-dependencies]
twilio = [
    "twilio>=8.11.1",
]
html2text = [
    "html2text",
]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "mock>=5.2.0",
    "pytz>=2025.2",
]