[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/herald"]

[project]
name = "django-heralder"
version = "0.4.2"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "MIT"
description = "Django library for separating the message content from transmission method."
authors = [
    { name = "PJ Farrell", email = "pj@mariska.dev" }
]

dependencies = [
    "django>=3.2,<=6.1",
    "jsonpickle>=4.1.1",
]

keywords = [
    "django",
    "notifications",
    "messaging",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
twilio = [
    "twilio>=8.11.1",
]
html2text = [
    "html2text>=2025.2.26",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coveralls>=4.0.1",
    "mock>=5.2.0",
    "pytz>=2025.2",
]
django32 = [ "django>=3.2a1,<4; python_version>='3.10'" ]
django42 = [ "django>=4.2a1,<5; python_version>='3.10'" ]
django50 = [ "django>=5a1,<5.1; python_version>='3.10'" ]
django51 = [ "django>=5.1a1,<5.2; python_version>='3.10'" ]
django52 = [ "django>=5.2a1,<6; python_version>='3.10'" ]
django60 = [ "django>=6a1,<6.1; python_version>='3.12'" ]

[project.urls]
Homepage = "https://github.com/peterfarrell/django-heralder"
Repository = "https://github.com/peterfarrell/django-heralder.git"
Issues = "https://github.com/peterfarrell/django-heralder/issues"
Changelog = "https://github.com/peterfarrell/django-heralder/blob/main/CHANGELOG.md"

[tool.uv]
package = true
# Conflicts: https://docs.astral.sh/uv/reference/settings/#conflicts
conflicts = [
  [
    { group = "django32" },
    { group = "django42" },
    { group = "django50" },
    { group = "django51" },
    { group = "django52" },
    { group = "django60" },
  ],
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true
